--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
 
 margin:0;
-width: 70%;
+width: 60%;
 margin-left: auto;
 margin-right: auto;
 }
@@ -24,8 +24,96 @@ header h3{
     padding-top: 75px;
     float:left;
     padding-bottom: 75px;
-    padding-left: 30%;
+    padding-left: 20%;
 }
 
 /* Navbar */
 
+navbar li{
+    display: inline;
+    padding-right: 30px;
+    float: right;
+}
+navbar ul{
+    font-weight: bold;
+    overflow: hidden;
+    color: white;
+    font-family: sans-serif;
+    font-size: large;
+    margin: 0;
+    padding: 15px;
+    background-color: rgb(198,82,82);
+}
+
+
+/* Main */
+
+main h1{
+    font-size: 4em;
+    text-align: center;
+}
+#main-container{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+#first-img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+.img{
+    text-align: center;
+}
+
+main h2{
+    text-align: center;
+}
+
+#img-container{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.box1{
+    height: 15em;
+    width: 45%;
+    overflow:hidden;
+}
+.box2{
+    height: 15em;
+    width: 45%;
+    float:right;
+    overflow:hidden;
+}
+.text1{
+    width: 45%;
+    float: left;
+    overflow:hidden;
+}
+.text2{
+    width: 45%;
+    float: right;
+    overflow:hidden;
+}
+
+/* Footer */
+
+footer{
+    background-color: #CABBB7;
+    padding: 15px;
+    width: 100%;
+}
+#footer-img{
+    width:30%;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+footer p{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: large;
+}
